<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginLeft="@dimen/distance_20"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_fullName"
        android:layout_width="@dimen/distance_350"
        android:layout_height="@dimen/distance_50"
        android:layout_marginLeft="@dimen/distance_20"
        android:layout_below="@+id/txt_fullName"
        />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginLeft="@dimen/distance_20"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_below="@+id/et_fullName"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="@dimen/distance_350"
        android:layout_height="@dimen/distance_50"
        android:layout_marginLeft="@dimen/distance_20"
        android:layout_below="@+id/txt_phone"
        />

    <Button
        android:id="@+id/btn_addlocal"
        android:layout_width="@dimen/distance_150"
        android:layout_height="@dimen/distance_70"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginLeft="@dimen/distance_20"
        android:text="@string/add_local"
        android:layout_below="@+id/et_phone"
        />

    <Button
        android:id="@+id/btn_addfirestore"
        android:layout_width="@dimen/distance_150"
        android:layout_height="@dimen/distance_70"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginRight="@dimen/distance_40"
        android:text="@string/add_firestore"
        android:layout_below="@+id/et_phone"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/btn_querylocal"
        android:layout_width="@dimen/distance_150"
        android:layout_height="@dimen/distance_70"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginLeft="@dimen/distance_20"
        android:text="@string/query_local"
        android:layout_below="@+id/btn_addlocal"
        />

    <Button
        android:id="@+id/btn_queryfirestore"
        android:layout_width="@dimen/distance_150"
        android:layout_height="@dimen/distance_70"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginRight="@dimen/distance_40"
        android:text="@string/query_firestore"
        android:layout_below="@+id/btn_addfirestore"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>