<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginLeft="@dimen/distance_20"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:text="@string/result_firebase"
        />

    <TextView
        android:id="@+id/result_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/full_name"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginLeft="@dimen/distance_20"
        android:layout_below="@+id/txt_name"
        />

    <TextView
        android:id="@+id/result_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/phone"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginRight="@dimen/distance_100"
        android:layout_below="@+id/txt_name"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>